--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 
@@ -59,7 +59,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="Appetizers.html">Appetizers</a></li>
                             <li><a href="Dinner.html">Dinner</a></li>
-                            <li><a href="#">Dessert</a></li>
+                            <li><a href="dessert.html">Dessert</a></li>
                         </ul>
                     </li>
                 </ul>
