--- a/winelist.html
+++ b/winelist.html
@@ -80,7 +80,23 @@
 
 
                 </div>
-            </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">
+                                Excel File
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapse5" class="panel-collapse collapse ">
+                        
+                            <p><a href="https://github.com/Bwall72/bwall72.github.io/raw/master/datasheet.xlsx">Click here to download the file.</a></p>
+                        
+
+
+                    </div>
+
+                </div>
         </div>
     </div>
     <!--#region bootstrap files-->
