--- a/winelist.html
+++ b/winelist.html
@@ -80,6 +80,7 @@
 
 
                 </div>
+                </div>
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
