wine list...again

--- a/winelist.html
+++ b/winelist.html
@@ -98,6 +98,25 @@
                     </div>
 
                 </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse6">
+                            PDF Downloads
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapse6" class="panel-collapse collapse ">
+                    <p><a href="https://github.com/Bwall72/bwall72.github.io/raw/master/datasortedbypopularity.pdf">Sorted by popularity.</a></p>
+                    <p><a href="https://github.com/Bwall72/bwall72.github.io/raw/master/datasortedbyprice.pdf">Sorted by price.</a></p>
+                    <p><a href="https://github.com/Bwall72/bwall72.github.io/raw/master/datasortedbyscore.pdf">Sorted by critic rating.</a></p>
+                    <p><a href="https://github.com/Bwall72/bwall72.github.io/raw/master/datasortedbyname.pdf">Sorted by name.</a></p>
+
+
+
+                </div>
+
+            </div>
         </div>
     </div>
     <!--#region bootstrap files-->
