--- a/vegetableRecomendation.html
+++ b/vegetableRecomendation.html
@@ -46,7 +46,7 @@
                                 <th>$492</th>
                                 <th>White</th>
                                 <th>Sauvignon Blanc - Semillon</th>
-                                <th>Krug Brut</th>
+                                <th>Sauternes</th>
                             </tr>
                         </tbody>
                         <tbody>
