adding updated region page

--- a/winelist.html
+++ b/winelist.html
@@ -58,9 +58,10 @@
                     </h4>
                 </div>
                 <div id="collapse3" class="panel-collapse collapse">
-                    <object width="100%;" height="900" type="application/pdf" data="https://github.com/Bwall72/bwall72.github.io/raw/master/datasortedbyscore.pdf" id="pdf_content">
+                    
+                    <iframe width="100%;" height="900" type="application/pdf" data="https://github.com/Bwall72/bwall72.github.io/raw/master/datasortedbyscore.pdf" id="pdf_content">
                         <p><a href="https://github.com/Bwall72/bwall72.github.io/raw/master/datasheet.xlsx">If you cannot see the file, click here to download the excel file.</a></p>
-                    </object>
+                    </iframe>
 
 
                 </div>
@@ -77,6 +78,7 @@
                     <object width="100%;" height="900" type="application/pdf" data="https://github.com/Bwall72/bwall72.github.io/raw/master/datasortedbyname.pdf" id="pdf_content">
                         <p><a href="https://github.com/Bwall72/bwall72.github.io/raw/master/datasheet.xlsx">If you cannot see the file, click here to download the excel file.</a></p>
                     </object>
+
 
 
                 </div>
