--- a/dessert.html
+++ b/dessert.html
@@ -258,6 +258,15 @@
             </div>
         </div>
     </div>
+    <div class="continer" style="margin-top:100px;" id="homeButton">
+        <div class="col-lg-8 col-lg-offset-2" style="text-align:center; margin-top:100px;">
+            <a href="index.html" class="btn btn-default">
+
+                Home
+
+            </a>
+        </div>
+    </div>
     <!--#region bootstrap files-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
