i have a calc final that i need to study for

--- a/champagneInfo.html
+++ b/champagneInfo.html
@@ -112,7 +112,7 @@
         <div class="row">
             <div class="col-lg-4"></div>
             <div class="col-lg-4" style="font-size:40px; text-align:center; ">
-                Information about Region
+                Information about Champagne
             </div>
             <div class="col-lg-4"></div>
         </div>
@@ -120,15 +120,17 @@
 
             <div class="col-lg-4 col-xs-12">
                 <h1>General Information</h1>
-            
+                The Champagne Region is the most northern of France’s major vineyards, centered on the towns of Rheims and Epernay.
             </div>
             <div class="col-lg-4 col-xs-12">
                 <h1>Wine Properties</h1>
-                Information about the types of greapes available in the region. How that affects the type of wine that comes from the region.
+                Champagne is by EU law, a special designation to wine produced exclusively in Champagne, France. Champagne is famous for its all-important bubbles and historic prestige. The wine also has a history of a dedicated consumer base.
             </div>
             <div class="col-lg-4 col-xs-12">
                 <h1>Notable Wine Producers</h1>
-                Information about the different notable wine producers in the region. Can be a list.
+                The most popular producers incldue Krug;, Mumm, Bollinger and Heidsieck, Moët & Chandon, and Taittinger.
+
+
             </div>
         </div>
     </div>
