--- a/champagnerecommendation.html
+++ b/champagnerecommendation.html
@@ -118,7 +118,7 @@
                 <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-                            Critic Recomenations
+                            Top Wines from Champagne
                         </a>
                     </h4>
                 </div>
