--- a/regionselection.html
+++ b/regionselection.html
@@ -27,7 +27,7 @@
                 <!-- #$VERSION:2.3 -->
                 <!-- #$AUTHOR:Brand -->
                 <area shape="rect" coords="242,152,414,215" href="Loire.html" alt="1" />
-                <area shape="rect" coords="263,227,368,276" href="charentes.html" alt="2" />
+                <area shape="rect" coords="263,227,368,276" href="charentesInformation.html" alt="2" />
                 <area shape="rect" coords="267,281,373,326" href="bordeaux.html" alt="3" />
                 <area shape="rect" coords="273,338,354,385" href="bergerac.html" alt="4" />
                 <area shape="rect" coords="379,89,485,138" href="champagneHome.html" alt="5" />
