changing alsace link to be correct

--- a/regionselection.html
+++ b/regionselection.html
@@ -31,7 +31,7 @@
                 <area shape="rect" coords="267,281,373,326" href="bordeaux.html" alt="3" />
                 <area shape="rect" coords="273,338,354,385" href="bergerac.html" alt="4" />
                 <area shape="rect" coords="379,89,485,138" href="champagneHome.html" alt="5" />
-                <area shape="rect" coords="515,121,554,184" href="alsace.html" alt="6" />
+                <area shape="rect" coords="515,121,554,184" href="Alsace.html" alt="6" />
                 <area shape="rect" coords="441,199,513,284" href="burgundy.html" alt="7" />
                 <area shape="rect" coords="438,286,512,377" href="rhone.html" alt="8" />
                 <area shape="rect" coords="387,335,434,395" href="languedoc.html" alt="9" />
