alsace more updates

--- a/Alsace.html
+++ b/Alsace.html
@@ -64,7 +64,7 @@
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
                             <div class="row">
-                                <a href="informationIndex.html">
+                                <a href="AlsaceInformation.html">
                                     <img style="height:500px;" src="AlsaceImage4.jpeg" />
                                 </a>
                                 <div class="carousel-caption">
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <a href="regionwineindex.html">
+                            <a href="AlsaceRecommendation.html">
                                 <img style="height:500px;" src="AlsaceImage2.jpeg" />
                             </a>
                             <div class="carousel-caption">
